Button Alignment Fix

--- a/src/Pages/Components/QualificationDiv.css
+++ b/src/Pages/Components/QualificationDiv.css
@@ -148,7 +148,7 @@
 
   #qualBTNs {
     display: block;
-    width: 50%;
+    width: 100%;
     align-items: center;
     text-align: center;
     margin-top: 30px;
